 * Fixed a bug that prevented "renewed" notifications to be sent out when a renewal job
   had already successfully notified about another event. See #235.
 * new event ```challenge-setup:<type>:<domain>```, triggered when the challenge data
   for a domain has been created. This is invoked before the ACME server is told to
   check for it. The type is one of the ACME challenge types. This is invoked for
   every DNS name in a MDomain.
 * Using ```configure``` with ```--with-boulder``` or ```--with-pebble``` selects the
   default URLs for both test servers.
 * Removed the special environment variable passing for MDChallengeDns01 again as
   this interferes with needed environment variables on platforms.
 * mod_md is enabled in freebsd's apache24 package since August 2020, thanks to
   Mina Galić (@igalic). Nice!

v2.3.6 (BETA)
----------------------------------------------------------------------------------------------------
 * Andreas Ulm (<https://github.com/root360-AndreasUlm>) implemented the ```renewing``` call
   to ```MDMessageCmd``` that can deny a certificate renewal attempt. This is useful in clustered
   installations, as discussed in #233).
 * Fixed tests to accommodate for the new message type.

v2.3.5 (BETA)
----------------------------------------------------------------------------------------------------
 * Certain error codes reported by the ACME server that indicate a problem with the
   configured data now immediately switch to daily retries. For example: if the ACME
   server rejects a contact email or a domain name, frequent retries will most likely
   not solve the problem. But daily retries still make sense as there might be an
   error at the server and un-supervised certificate renewal is the goal. Refs #222.
 * The max delay for retries has been raised to daily (this is like all retries jittered
   somewhat to avoid repeats at fixed time of day).
 * No longer debug logging the ocsp renewal success with an error indicator. Fixes #197.